# generator-beet

./: .eslintrc.yml  .prettierrc.yaml  .releaserc.yaml  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
generators/: generator-base.js  utils.js
generators/app/: index.js  plugins.js
generators/app/templates/: beet-release.json  beet.json
generators/app/templates/datapack/data/__author_namespace__/functions/__namespace__/: install.mcfunction  load.mcfunction  tick.mcfunction
generators/app/templates/datapack/data/minecraft/tags/functions/: load.json
generators/datapack/: index.js
generators/datapack/templates/data/__author_namespace__/advancements/__namespace__/: installed.json
generators/datapack/templates/data/__author_namespace__/functions/__namespace__/: install.mcfunction  load.mcfunction  uninstall.mcfunction
generators/datapack/templates/data/global/advancements/: __author_namespace__.json
generators/datapack/templates/data/minecraft/tags/functions/: load.json  tick.json
generators/git/: index.js
generators/poetry/: index.js
generators/poetry/templates/: .pre-commit-config.yaml  pyproject.toml
generators/poetry/templates/.github/workflows/: release.yml
generators/resourcepack/: index.js
